// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error View test on web does not render an error state if there is no error 1`] = `
<div
  dir="auto"
>
  All good
</div>
`;

exports[`Error View test on web renders the error state if a component invokes an error 1`] = `
<div
  dir="auto"
>
  Error: some error
</div>
`;

exports[`Error View test on web renders the error state if a component throws an error 1`] = `
<div
  dir="auto"
>
  Error: an error occurred
</div>
`;
